# Sistema-Multiagente-de-Monitoramento-de-Risco-Regulat-rio

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  EVALUATION_METHODOLOGY.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  PROJECT_STATUS.txt  QUICK_START.sh  README.md  TODO.md  app.py  compose.yaml  main.py  pyproject.toml  regulatory_monitor.db  requirements.txt
article/: paper.tex
data/: regulatory_monitor.db
data/corpus/: annotated_corpus.jsonl
database/: schema.sql
examples/: LLM_INTEGRATION_EXAMPLE.py  api_usage.py
reports/quality/: quality_report_20260626_090648.json  quality_report_20260626_090657.json  quality_report_20260626_091530.json  quality_report_20260626_091725.json  quality_report_20260626_092459.json  quality_report_20260701_134151.json  quality_report_20260701_140738.json  quality_report_20260701_150232.json
scripts/: build_annotated_corpus.py  evaluate_analysis_quality.py  regenerate_gold_dates.py
src/: __init__.py
src/agents/: __init__.py  alert_agent.py  analysis_agent.py  monitor_agent.py
src/utils/: __init__.py  data_collection.py  evaluation.py  llm_integration.py
tests/: test_alert_agent.py  test_analysis_agent.py  test_document_repository.py  test_evaluation.py  test_llm_integration.py  test_main.py  test_monitor_agent.py  test_text_processor.py
