[project]
name = "sistema-multiagente-de-monitoramento-de-risco-regulat-rio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "beautifulsoup4==4.12.2",
    "chromadb==0.4.22",
    "feedparser==6.0.10",
    "langchain==0.1.13",
    "langchain-community==0.0.32",
    "langgraph==0.0.34",
    "lxml==4.9.3",
    "numpy==1.26.2",
    "pandas==2.1.3",
    "pydantic==2.5.0",
    "python-dateutil==2.8.2",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "sqlalchemy==2.0.23",
    "streamlit==1.28.1",
]
